<?xml version="1.0"?>
<package format="2">
  <name>track_robot_hw</name>
  <version>0.0.1</version>
  <description>The track_robot_hw package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>BSD</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
